src/objects/Process__c.object
<CustomObject>
    <fields>
        <fullName>Days_to_RunOut__c</fullName>
        <description>Number of days until we need to replenish our supply.</description>
        <inlineHelpText>Enter the # of days until the stock on site is available until exhausted. This should include reorder and delivery time</inlineHelpText>
        <label>Days to RunOut</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Emergency_Plans_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Emergency Plans Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Process</label>
        <referenceTo>Process__c</referenceTo>
        <relationshipLabel>Sub Processes</relationshipLabel>
        <relationshipName>Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Process_Description_Long__c</fullName>
        <label>Process Description Long</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Process_Description_Short__c</fullName>
        <label>Process Description Short</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Processes</relationshipLabel>
        <relationshipName>Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Process</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Parent_Process__c</columns>
        <columns>Process_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>